# technical-interview-backend

./: Dockerfile  docker-compose.yml  pyproject.toml
scripts/: dev.sh
src/: main.py  schemas.py  worker.py
src/ai/: llm_graph.py
src/db/: db.py  models.py
src/services/: queue_service.py
src/services/db/: conversation_service.py
src/utils/: env.py
tests/: test.py
