[tool.poetry]
name = "kosmoy-interview-backend"
version = "0.1.0"
description = "Kosmoy interview project."
authors = ["Kosmoy"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.41"
redis = "^6.1.0"
pydantic-settings = "^2.9.1"
rq = "^2.3.3"
langgraph = "^0.4.3"
python-dotenv = "^1.1.0"
langchain-openai = "^0.3.16"
langchain = "^0.3.25"
langchain-community = "^0.3.24"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
